--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,7 @@
 	<properties>
 		<java.version>8</java.version>
 		<spring-cloud.version>2021.0.2</spring-cloud.version>
+		<mapstruct.version>1.4.2.Final</mapstruct.version>
 	</properties>
 	<dependencies>
 		<dependency>
@@ -42,6 +43,16 @@
 			<artifactId>gson</artifactId>
 			<version>2.9.0</version>
 		</dependency>
+		<dependency>
+            <groupId>org.mapstruct</groupId>
+            <artifactId>mapstruct</artifactId>
+            <version>${mapstruct.version}</version>
+        </dependency>
+		<dependency>
+            <groupId>org.mapstruct</groupId>
+            <artifactId>mapstruct-processor</artifactId>
+            <version>${mapstruct.version}</version>
+        </dependency>
 	</dependencies>
 	<dependencyManagement>
 		<dependencies>
